[gd_scene load_steps=5 format=3 uid="uid://ckjmpri7uvrlk"]

[ext_resource type="PackedScene" uid="uid://ctj8a1spf6tn8" path="res://Scenes/Turrets/turret_container.tscn" id="1_0b4fk"]
[ext_resource type="Script" path="res://Scenes/Turrets/Potato Launcher/potato_launcher_container.gd" id="2_mu8mr"]
[ext_resource type="PackedScene" uid="uid://dbgvdvwqkk88m" path="res://Models/Turrets/Potato Launcher/potato_launcher.tscn" id="2_o75se"]
[ext_resource type="PackedScene" uid="uid://bq70ynl0kopyg" path="res://Scenes/Turrets/Potato Launcher/potato_projectile.tscn" id="3_wy8qk"]

[node name="PotatoLauncherContainer" instance=ExtResource("1_0b4fk")]
script = ExtResource("2_mu8mr")
fire_rate_ms = 800
projectiles_to_shoot_at_a_time = 4
projectile_speed = 6.0
projectile_type = ExtResource("3_wy8qk")

[node name="PotatoLauncher" parent="." index="0" instance=ExtResource("2_o75se")]

[connection signal="area_entered" from="PotatoLauncher" to="." method="_on_potato_launcher_area_entered"]
[connection signal="area_exited" from="PotatoLauncher" to="." method="_on_potato_launcher_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
